[package]
name = "ipcheck-rs"
version = "0.6.7"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A library to manage IP ranges"
repository = "https://github.com/sticnarf/iprange-rs"
readme = "README.md"
documentation = "https://docs.rs/iprange/"
categories = ["network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
csv = { version = "1.3.1", optional = true }
eyre = { version = "0.6.12", optional = true }
handlebars = { version = "6.2.0", optional = true }
ipnet = "2.0.0"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.3.17"
bincode = "1"

[features]
default = []
ipcheck = ["csv", "eyre", "handlebars", "dep:serde"]
csv = ["dep:csv"]
eyre = ["dep:eyre"]
handlebars = ["dep:handlebars"]
serde = ["dep:serde"]

[[bin]]
name = "ipcheck"
path = "bin/ipcheck.rs"
required-features = ["ipcheck"]
