[package]
name = "ipcheck-rs"
version = "1.0.1"
authors = ["Alan WANG <alan1995wang@outlook.com>"]
description = "A command tool generates typescript ip checker from CIDR"
repository = "https://github.com/alannotnerd/ipcheck-rs"
readme = "README.rst"
categories = ["network-programming", "command-line-utilities"]
keywords = ["ip", "ipv4", "ipv6", "network", "filter"]
license = "MIT"
edition = "2021"

[dependencies]
csv = { version = "1.3.1", optional = true }
eyre = { version = "0.6.12", optional = true }
handlebars = { version = "6.2.0", optional = true }
ipnet = "2.0.0"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.3.17"
bincode = "1"

[features]
default = []
ipcheck = ["csv", "eyre", "handlebars", "dep:serde"]
csv = ["dep:csv"]
eyre = ["dep:eyre"]
handlebars = ["dep:handlebars"]
serde = ["dep:serde"]

[[bin]]
name = "ipcheck"
path = "bin/ipcheck.rs"
required-features = ["ipcheck"]
